fix: Modify pacakge json for windows build

--- a/packages/react-search-ui-views/package.json
+++ b/packages/react-search-ui-views/package.json
@@ -23,10 +23,10 @@
     "test-ci": "jest --runInBand",
     "test": "jest",
     "clean": "rimraf es lib",
-    "build-css": "./bin/build-css",
-    "watch-css": "./bin/watch-css",
-    "watch-js": "./bin/watch-js",
-    "build-js": "./bin/build-js",
+    "build-css": "node-sass src/ -o .temp/ && postcss .temp/styles/styles.css --use postcss-import autoprefixer -o lib/styles/styles.css && rimraf .temp",
+    "watch-css": "chokidar '**/*.scss' -c 'npm run build-css'",
+    "watch-js": "babel src --out-dir lib --ignore '**/*.test.js' --watch & babel src --out-dir es --ignore '**/*.test.js' --watch &",
+    "build-js": "babel src --out-dir lib --ignore '**/*.test.js' && babel src --out-dir es --ignore '**/*.test.js'",
     "build": "run-s clean build-css build-js",
     "watch": "run-p watch-css watch-js",
     "prepare": "npm run build",
