--- a/packages/react-search-ui-views/package.json
+++ b/packages/react-search-ui-views/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@elastic/react-search-ui-views",
+  "name": "@ivantagehealth/react-search-ui-views",
   "version": "1.2.0",
   "description": "A collection of React UI components for building search experiences",
   "license": "Apache-2.0",
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elastic/search-ui.git",
+    "url": "git+https://github.com/ivantage/search-ui.git",
     "directory": "packages/react-search-ui-views"
   },
   "scripts": {
@@ -34,7 +34,7 @@
     "build-storybook": "build-storybook"
   },
   "bugs": {
-    "url": "https://github.com/elastic/search-ui/issues"
+    "url": "https://github.com/ivantage/search-ui/issues"
   },
   "peerDependencies": {
     "react": "^16.8.0"
